# rust-3d

./: Cargo.toml
assets/models/: guy.glb  knight.glb  lady.glb  new_skl.glb  skl.glb  vegetation_corn.glb  vegetation_tree.glb
src/: animation.rs  asset_loader.rs  camera.rs  debug.rs  despawn.rs  entity.rs  input.rs  light.rs  main.rs  movement.rs  oentity.rs  player.rs  system_info.rs  world.rs
src/entities/: block.rs  character.rs  mod.rs  vegetation.rs
